fix labels layout inicial

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: SGI
-description: Computação Gráfica UFSC 2018.2
+title: INE5421
+description: Algoritmos para manipulação de LR
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
