Inclusão dos docs de ER e GR

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: INE5421
-description: Algoritmos para manipulação de LR
+description: Algoritmos para a manipulação de Linguagens Regulares
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
